// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Signatures > should handle exception when checking if participant is awaiting signature 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signatures > should not require signature if waiting for final signature in registration with isAwaitingOurSignature=false 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signatures > should not require signature if waiting for final signature in registration with isAwaitingOurSignature=true 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signatures > should render 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white css-1jo8u8k"
              data-testid="Signatures__waiting-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="clock-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                    transform="translate(1.5 1.5)"
                  >
                    <circle
                      cx="3.5"
                      cy="3.5"
                      r="4"
                    />
                    <path
                      d="M3.5 3.5V2m.1 1.6l.9.9"
                    />
                  </g>
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signatures > should render with waiting badge 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signatures > should show all participants as signed when all signatures are added 1`] = `
<div>
  <div
    data-testid="Signatures"
  >
    <h3>
      Signatures
    </h3>
    <div
      class="flex"
    >
      <div>
        <div
          class="mb-2 text-sm font-semibold text-theme-secondary-500"
        >
          You
        </div>
        <div
          class="mr-2 border-r border-theme-secondary-300 pr-6 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
      <div>
        <div
          class="mb-2 ml-2 text-sm font-semibold text-theme-secondary-500"
        >
          Other
        </div>
        <div
          class="ml-2 flex space-x-4"
        >
          <div
            class="relative"
            data-testid="Signatures__participant-status"
          >
            <div>
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                />
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500 dark:bg-theme-success-600 dark:text-white css-1jo8u8k"
              data-testid="Signatures__signed-badge"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="check-mark-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
